objects/Charge_Reversal_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Balance__c</fullName>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CL_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CL Contract</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Charge Reversal Transaction</relationshipLabel>
        <relationshipName>Charge_Reversal_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Charge</label>
        <referenceTo>loan__Charge__c</referenceTo>
        <relationshipLabel>Charge Reversal Transaction</relationshipLabel>
        <relationshipName>Charge_Reversal_Transaction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Txn_Date__c</fullName>
        <formula>DATEVALUE( Transaction_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Txn Date</label>
        <type>Date</type>
    </fields>
    <label>Charge Reversal Transaction</label>
    <nameField>
        <displayFormat>CRT-{0000000000}</displayFormat>
        <label>Charge Reversal Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charge Reversal Transaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>